Fixes test 33